# commitichan

./: Cargo.toml
src/: commit.rs  main.rs  read_message.rs
